# text2sparql

./: .env.example  .gitignore  DOCKER_SETUP.md  Dockerfile  README.md  TEST_QUERIES.md  _commit_msg.txt  docker-compose.yml  pyproject.toml  requirements.txt  test_agent_direct.py  test_end_to_end.py  test_llm_direct.py  test_pipeline.py
app/: __init__.py  config.py
app/agents/: __init__.py  kg_agent.py  kg_agent_supervisor.py  llm_client.py  nodes.py  stages.py  state.py  supervisor.py
app/link_prediction/: __init__.py  gcn_transe_hybrid.py  graph_builder.py  kg_model_manager.py  negative_sampling.py  pipeline.py  predictor.py  trainer.py  weak_supervision.py
app/prompts/: __init__.py  answer_generation.py  text2sparql.py
app/step1_generate/: generate_synthetic_data.py
app/step2_transform/: build_rdf_from_logs.py  rdf_utils.py
app/step3_load/: fuseki_executor.py  in_memory_sparql.py  load_to_fuseki.py
app/step4_query/: templates.py  text2sparql_agent.py
backend/: __init__.py  main.py  models.py  openai_compat.py  routes.py  test_ui.py
docs/: IMPLEMENTATION_COMPLETE.md  ONTOLOGY_DESIGN.md  PROJECT_COMPLETION_REPORT.md  personal_kg_interview_report.md  samsung_research_interview_presentation_notes.md
scripts/: check_chain4.py  check_fuseki_data.ps1  check_fuseki_data.py  check_kg_stats.py  load_fuseki.py  rank_happy_cases.py  test_6_suggestions.ps1  test_happy_cases.ps1  test_metduring.py
tests/: test_integration.py  test_llm_streaming.py  test_openai_event_formatting.py  test_sparse_completion.py  test_supervisor_stream_events.py
(+17 files in other folders)
